cpp/test/FreezeScript/dbmap/fail/19_old.ice
[["suppress-warning:deprecated"]] // for class that implements interface

module Test
{

class C {};

};
